rounded corners and other spacing issues

--- a/public/main.css
+++ b/public/main.css
@@ -8,6 +8,7 @@ font-family: 'Bellefair', serif;*/
 * {
   font-family: 'Roboto', sans-serif;
   text-align: center;
+  border-radius: 5px;
 }
 
 body {
@@ -32,13 +33,14 @@ form {
   padding: 10px;
 }
 
-
 p {
   font-size: 150%
 }
 
 button {
   text-transform: uppercase;
+  height: 40px;
+  width: 60px, fit-content;
 }
 
 
@@ -81,19 +83,23 @@ header {
   padding: 3px 12px;
 }
 
-
+textarea, input {
+  font-size: 1em;
+}
 
 /*THE SEARCH QUOTE FORM*/
 fieldset {
   background-color: white;
   border: 1px solid black;
   margin: auto;
-  width: 200px;
+  width: 300px;
+  height: 200px;
 }
 
 fieldset > input {
   background-color: white;
   margin: 10px;
+  overflow-wrap: normal;
 }
 
 fieldset > button {
